modify package loading in activities

--- a/slides/NTNU2017-2.tex
+++ b/slides/NTNU2017-2.tex
@@ -67,6 +67,16 @@
 
 \frame{\tableofcontents[subsubsectionstyle=hide]}
 
+
+\frame{
+
+\large\centering
+
+Form groups of 3 and share the survey-experiment examples you found on TESS.
+
+}
+
+
 \section[More Designs]{Beyond One-Shot Designs}
 \frame{\tableofcontents[currentsubsection,subsubsectionstyle=hide]}
 
