--- a/slides/NTNU2017-1.tex
+++ b/slides/NTNU2017-1.tex
@@ -1058,6 +1058,31 @@ Sometimes it looks like this instead, which is even worse:
 
 \againframe{tidy}
 
+\frame{
+
+\frametitle{Experimental Data Tidying}
+
+Sometimes it looks like this instead, which is even more worse:
+
+\small
+
+\begin{center}
+\begin{tabular}{ccccc}
+\texttt{unit} & \texttt{treatment} & \texttt{outcome0}  & \texttt{outcome1} & \texttt{order} \\ \hline 
+1 & . & 13 & 6 & 0,1\\
+2 & . & 6 & 8 & 0,1\\
+3 & . & 4 & 2 & 0,1\\
+4 & . & 5 & 1 & 0,1\\
+5 & . & 9 & 3 & 1,0\\
+6 & . & 4 & 1 & 1,0\\
+7 & . & 2 & 10 & 1,0\\
+8 & . & 8 & 9 & 1,0\\ \hline
+\end{tabular}
+\end{center}
+
+}
+
+\againframe{tidy}
 
 
 
